[package]
name = "median-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Image processing
image = "0.25.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Parallel processing
rayon = "1.8"

# CSV output
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Random for noise
rand = "0.9.2"

# Timing
chrono = "0.4"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }


# mpi
mpi = { version = "0.8.0", default-features = false, features = ["derive"] }
